--- a/src/app/features/sandbox/sandbox.component.html
+++ b/src/app/features/sandbox/sandbox.component.html
@@ -20,8 +20,10 @@
     </div>
 
     <div class="main-area">
-      <app-workspace></app-workspace>
-      <app-config-form></app-config-form>
+      <div class="workspace-config-row">
+        <app-workspace class="workspace-section"></app-workspace>
+        <app-config-form class="config-section"></app-config-form>
+      </div>
     </div>
   </div>
 </div>
